[package]
name = "parallel-future"
version = "6.0.3"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yoshuawuyts/parallel-future"
documentation = "https://docs.rs/parallel-future"
description = "fluent async task experiments"
readme = "README.md"
edition = "2018"
keywords = []
categories = []
authors = ["Yoshua Wuyts <rust@yosh.is>"]

[features]
tokio = ["dep:tokio"]
async-std = ["dep:async-std"]

[dependencies]
async-std = { version = "1.10.0", features = ["unstable"], optional = true }
futures-concurrency = "7.5.0"
pin-project = "1.0.10"
tokio = { version = "1.40.0", optional = true, features = ["rt"] }

[dev-dependencies]
async-std = { version = "1.10.0", features = ["unstable", "attributes"] }
tokio = { version = "1.40.0", features = ["rt", "time", "macros"] }
